2004-11-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/plugin-browser.c (browser_dialog_new): fixed
	capitalization of notebook tab label.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimputils.[ch]: renamed gimp_flags_get_value() to
	gimp_flags_get_first_value(). Reordered functions so enum and
	flags functions are grouped together. Added missing docs.

	* libgimpbase/gimpbase.def: changed accordingly.

2004-11-09  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c: Skip resources with unknown signatures
	instead of quiting.  Fixes bug #142468, and bug #152728

	* app/core/gimpdrawable.c: in functions gimp_drawable_mask_bounds,
	and gimp_drawable_mask_intersect: reinitialize the return values
	after calling gimp_channel_bounds because gimp_channel_bounds
	overwrites the values even when it returns false.  This fixes the
	bug where the gimp crashes when running color tools on layers
	smaller than the image, and processes only part of the image when
	the layer is larger than the image size.

2004-11-10  Sven Neumann  <sven@gimp.org>

	* HACKING: some updates.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: use a UI manager created
	toolbar instead of two rows of buttons. Added a "dummy-menubar" so
	the popup menu shows shortcuts again. Removed "Preview" and "Auto"
	buttons since the preview doesn't block the GUI and can always be
	updated.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.[ch]: added new function
	gimp_statusbar_push_length(), which works exactly like
	push_coords() but takes only one value plus a GimpOrientationType
	for specifying the value's axis.

	* app/tools/gimptool.[ch]: added the corresponding
	gimp_tool_push_status_length().

	* app/tools/gimpmovetool.c: use gimp_tool_push_status_length()
	so the guide position is shown in the selected display unit.
	Cleaned up the status message code a bit.

2004-11-10  Sven Neumann  <sven@gimp.org>
